@@ -1,3 +1,5 @@
+888*.conf
+var888*
 *.o
 *.a
 *.out
