@@ -15,15 +15,53 @@ int main(int argc, char **argv){
 	}
 
 	ssdb::Status s;
+	std::string val;
+	std::vector<std::string> vals;
+
+	// set and get
 	s = client->set("k", "hello ssdb!");
 	if(s.ok()){
 		printf("k = hello ssdb!\n");
 	}else{
 		printf("error!\n");
 	}
-	std::string val;
 	s = client->get("k", &val);
 	printf("length: %d\n", (int)val.size());
+
+	// qpush, qslice, qpop
+	s = client->qpush("k", "hello1!");
+	if(s.ok()){
+		printf("qpush k = hello1!\n");
+	}else{
+		printf("error!\n");
+	}
+	s = client->qpush("k", "hello2!");
+	if(s.ok()){
+		printf("qpush k = hello2!\n");
+	}else{
+		printf("error!\n");
+	}
+	s = client->qslice("k", 0, 1, &vals);
+	if(s.ok()){
+		printf("qslice 0 1\n");
+		for(int i = 0; i < (int)vals.size(); i++){
+			printf("    %d %s\n", i, vals[i].c_str());
+		}
+	}else{
+		printf("error!\n");
+	}
+	s = client->qpop("k", &val);
+	if(s.ok()){
+		printf("qpop k = %s\n", val.c_str());
+	}else{
+		printf("error!\n");
+	}
+	s = client->qpop("k", &val);
+	if(s.ok()){
+		printf("qpop k = %s\n", val.c_str());
+	}else{
+		printf("error!\n");
+	}
 
 	delete client;
 	return 0;
