@@ -5,6 +5,7 @@ found in the LICENSE file.
 */
 #include "binlog.h"
 #include "const.h"
+#include "../include.h"
 #include "../util/log.h"
 #include "../util/strings.h"
 #include <map>
