@@ -6,7 +6,23 @@ found in the LICENSE file.
 #ifndef UTIL_LOG_H
 #define UTIL_LOG_H
 
-#include "../include.h"
+#include <inttypes.h>
+#include <unistd.h>
+#include <stdarg.h>
+#include <stdio.h>
+#include <stdint.h>
+#include <stdlib.h>
+#include <limits.h>
+#include <errno.h>
+#include <string.h>
+#include <math.h>
+#include <fcntl.h>
+#include <assert.h>
+#include <signal.h>
+#include <time.h>
+#include <sys/time.h>
+#include <sys/types.h>
+#include <sys/stat.h>
 #include <pthread.h>
 
 class Logger{
