@@ -15,7 +15,7 @@ server:
 	#deny: all
 	#allow: 127.0.0.1
 	#allow: 192.168
-	# auth password must be longer than 31 characters
+	# auth password must be at least 32 characters
 	#auth: very-strong-password
 	#max_connections: 10000
 	# default : 100 MByte (1024 * 1024 * 100)
@@ -35,6 +35,7 @@ replication:
 		#type: sync
 		#ip: 127.0.0.1
 		#port: 8889
+		#auth: password
 
 logger:
 	level: debug
