@@ -1,0 +1,2 @@
+@echo off
+%~dp0..\deps\cpy\cpy.bat %~dp0\ssdb-cli.cpy %1 %2 %3 %4 %5 %6 %7 %8 %9
