@@ -33,7 +33,9 @@ function flushdb(link, data_type){
 	printf('This operation is DANGEROUS and is not recoverable, if you\n');
 	printf('really want to flush the whole db(delete ALL data in ssdb server),\n');
 	printf('input \'yes\' and press Enter, or just press Enter to cancel\n');
-	printf('=================================================================\n');
+	printf('\n');
+	printf('flushdb will break replication states, you must fully understand\n');
+	printf('the RISK before you doing this!\n');
 	printf('\n');
 	printf('> flushdb? ');
 	
